added book covers

--- a/dev/shop.html
+++ b/dev/shop.html
@@ -25,7 +25,7 @@
     <main>
         <h1>SHOP</h1>
         <div class="book">
-            <img src="assets/img/winter-book.png" alt="Winter book cover">
+            <img src="assets/img/shop/winter-book.png" alt="Winter book cover">
             <div class="book-info">
                 <p>Add paragraph text. Click "Edit Text" to update the font, size and more. To change and reuse text themes, go to Site Styles.</p>
                 <p>$15 USD</p>
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="book">
-            <img src="assets/img/spring-book.png" alt="Spring book cover">
+            <img src="assets/img/shop/spring-book.png" alt="Spring book cover">
             <div class="book-info">
                 <p>Add paragraph text. Click "Edit Text" to update the font, size and more. To change and reuse text themes, go to Site Styles.</p>
                 <p>$15 USD</p>
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="book">
-            <img src="assets/img/summer-book.png" alt="Summer book cover">
+            <img src="assets/img/shop/summer-book.png" alt="Summer book cover">
             <div class="book-info">
                 <p>Add paragraph text. Click "Edit Text" to update the font, size and more. To change and reuse text themes, go to Site Styles.</p>
                 <p>$15 USD</p>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="book">
-            <img src="assets/img/autumn-book.png" alt="Autumn book cover">
+            <img src="assets/img/shop/autumn-book.png" alt="Autumn book cover">
             <div class="book-info">
                 <p>Add paragraph text. Click "Edit Text" to update the font, size and more. To change and reuse text themes, go to Site Styles.</p>
                 <p>$15 USD</p>
