replaced template emails with official one

--- a/dev/events.html
+++ b/dev/events.html
@@ -41,7 +41,7 @@
         </div> -->
     </main>
     <footer>
-        <p>Email the author at email@emailaddress.com</p>
+        <p>Email the author at <a href="mailto:info@bartlomebooks.com">info@bartlomebooks.com</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
