Changed shop page Removed pricing from each book Replaced links to unreleased books with 'coming soon' message Added amazon and b&n links to summer book

--- a/dev/shop.html
+++ b/dev/shop.html
@@ -27,44 +27,54 @@
         <div class="book">
             <img src="assets/img/shop/winter-book.png" alt="Winter book cover">
             <div class="book-info">
-                <p>Add paragraph text. Click "Edit Text" to update the font, size and more. To change and reuse text themes, go to Site Styles.</p>
-                <p>$15 USD</p>
-                <div class="buttons">
+                <p>Hidden among snowflakes, the winter fairies guard the sleeping world with calm and quiet grace. When an ancient frost threatens to freeze all life, they must rekindle the spark of hope buried beneath the ice.</p>
+                <!-- <p>$15 USD</p> -->
+
+                <div class="coming-soon-tag">Coming Soon!</div>
+                <!-- <div class="buttons">
                     <button>AMAZON</button>
                     <button>BARNES &amp; NOBLE</button>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="book">
             <img src="assets/img/shop/spring-book.png" alt="Spring book cover">
             <div class="book-info">
-                <p>Add paragraph text. Click "Edit Text" to update the font, size and more. To change and reuse text themes, go to Site Styles.</p>
-                <p>$15 USD</p>
-                <div class="buttons">
+                <p>With every bud and blossom, the spring fairies awaken the earth from its long slumber. Yet as new life bursts forth, they must protect their fragile creations from chaos and change.</p>
+                <!-- <p>$15 USD</p> -->
+
+                <div class="coming-soon-tag">Coming Soon!</div>
+                <!-- <div class="buttons">
                     <button>AMAZON</button>
                     <button>BARNES &amp; NOBLE</button>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="book">
             <img src="assets/img/shop/summer-book.png" alt="Summer book cover">
             <div class="book-info">
-                <p>Add paragraph text. Click "Edit Text" to update the font, size and more. To change and reuse text themes, go to Site Styles.</p>
-                <p>$15 USD</p>
+                <p>Summer is a care-free, playful little fairy who finds herself in a magical place, facing an unexpected challenge. Journey with her as she discovers a true-life lesson to be learned.</p>
+                <!-- <p>$15 USD</p> -->
                 <div class="buttons">
-                    <button>AMAZON</button>
-                    <button>BARNES &amp; NOBLE</button>
+                    <a href="https://www.amazon.com/Summer-Tale-Fairies-Abbie-Bartlom%C3%A9/dp/B0FNSCSJJV/ref=sr_1_1?crid=6MBIXLQB0I28&dib=eyJ2IjoiMSJ9.pTJfYwWXrpwZPiYreA-RRBTGnUiwNS5H61Dk-At6rFlI-Dhgx5qZfgIvM00hOn_ES4TMqEj7Cl8fmgBST92KbZPgdiFKJSiwewUrx02xxplF2Nx6RH6fF0N1Mj2-uRxA3-Ma4dxpG7fCrtvhEeXNJFFw1YR9OXoedaAQgJWM2QprihXZLtKgS0iaJ4t4XWxazCkiNXYjWCQyVZiheV6ZEGh6wwis2_E1eo5cb3k9vXg.Lv8sZdf-3GrELCF4qNE66ZlR_IgEkrk10rFzoUYOru4&dib_tag=se&keywords=summer+a+tales+of+fairies+four&qid=1762624162&sprefix=summer+a+tales+of+fairies+fou%2Caps%2C223&sr=8-1" target="_blank">
+                        <button>AMAZON</button>
+                    </a>
+                    <a href="https://www.barnesandnoble.com/s/summer%20a%20tale%20of%20fairies%20four" target="_blank">
+                        <button>BARNES &amp; NOBLE</button>
+                    </a>
                 </div>
             </div>
         </div>
         <div class="book">
             <img src="assets/img/shop/autumn-book.png" alt="Autumn book cover">
             <div class="book-info">
-                <p>Add paragraph text. Click "Edit Text" to update the font, size and more. To change and reuse text themes, go to Site Styles.</p>
-                <p>$15 USD</p>
-                <div class="buttons">
+                <p>The autumn fairies paint the world in amber and gold, guiding nature through its graceful decay. But as shadows lengthen, they must ensure that endings become beginnings once more.</p>
+                <!-- <p>$15 USD</p> -->
+
+                <div class="coming-soon-tag">Coming Soon!</div>
+                <!-- <div class="buttons">
                     <button>AMAZON</button>
-                    <button>BARNES &amp; NOBLE</button>
+                    <button>BARNES &amp; NOBLE</button> -->
                 </div>
             </div>
         </div>
