Added event info

--- a/dev/events.html
+++ b/dev/events.html
@@ -25,7 +25,21 @@
     <main>
         <h1>EVENTS</h1>
 
-        <div style="margin: 24px;">There are currently no events happening. Check back later!</div>
+        <div class="event">
+            <img src="assets/img/kids_reading.jpg" alt="Kids reading">
+            <div class="event-info">
+                <h2>Book Reading</h2>
+                <p><strong>Date:</strong> 15 November 2025</p>
+                <p><strong>Time:</strong> 8am - 5pm</p>
+                <p><strong>Location:</strong> Ben Lomond High School</p>
+                <p>Come read about Summer the fairy and meet the author! Can't wait to see you there!</p>
+                <a href="https://www.facebook.com/share/1734p1BeJd/" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Facebook_logo_%28square%29.png/500px-Facebook_logo_%28square%29.png" alt="facebook-logo" class="facebook-event-logo"/>
+                </a>
+            </div>
+        </div>
+
+        <!-- <div style="margin: 24px;">There are currently no events happening. Check back later!</div> -->
 
         <!-- TEMPLATE
             <div class="event">
